tests/samples/0086/error.txt
error[P0011]: unexpected identifier, expected `;`
   --> 0086/code.ara:25:22
   |
25 |     private mixed $a FOO = new Foo();
   |                      ^^^

error: failed to parse "0086/code.ara" due to the above issue(s)
 = summary: 1 error(s)

